.opsera-last1/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-last1-dev
  labels:
    tenant: opsera
    app: last1
    environment: dev
    managed-by: opsera-c2c
