.opsera-last1/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: last1
  namespace: opsera-last1-dev
  labels:
    app: last1
    tenant: opsera
    managed-by: opsera-c2c
spec:
  type: ClusterIP
  selector:
    app: last1
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
